# openjtalk-rest-api

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest_on_docker_compose.sh
.github/workflows/: docker-image.yml
openjtalk_rest_api/: config.py  effects.py  jtalk.py  main.py
tests/: test_main.py
