[tool.poetry]
name = "openjtalk-rest-api"
version = "0.1.0"
description = ""
authors = ["alcnaka <47954083+alcnaka@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openjtalk_rest_api"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
